--- a/client/src/app/tabs/tab1/psg-block/psg-block.component.html
+++ b/client/src/app/tabs/tab1/psg-block/psg-block.component.html
@@ -1,3 +1,38 @@
-<p>
-  psg-block works!
-</p>
+<!--普通样式-->
+<ion-card>
+
+  <ion-card-header>
+    <ion-card-title>{{curPassage.title}}</ion-card-title>
+    <ion-card-subtitle>
+      <ion-grid>
+        <ion-row>
+          <ion-col size="1">
+            <ion-avatar style="width: 24px; height: 24px">
+              <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
+            </ion-avatar>
+          </ion-col>
+          <ion-col size="11">{{curPassage.subtitle}}</ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-subtitle>
+  </ion-card-header>
+
+  <ion-card-content (click)="jumpDetail()">
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          {{curPassage.content}}
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="3"><ion-icon name="thumbs-up-sharp"></ion-icon>{{curPassage.likeNumber}}</ion-col>
+        <ion-col size="3"><ion-icon name="chatbox"></ion-icon>{{curPassage.commentsNumber}}</ion-col>
+      </ion-row>
+    </ion-grid>
+
+  </ion-card-content>
+</ion-card>
+
+<!--图片样式-->
+
+
