--- a/client/src/app/tabs/tab1/tab1.page.html
+++ b/client/src/app/tabs/tab1/tab1.page.html
@@ -6,6 +6,18 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Tab 1</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
+  <ion-grid>
+    <ion-row *ngFor="let passage of loadPsgs">
+      <ion-col>
+        <app-psg-block [curPassage]="passage"></app-psg-block>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
