--- a/client/src/global.scss
+++ b/client/src/global.scss
@@ -24,3 +24,26 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+ion-card{
+  padding: 0;
+}
+
+ion-grid{
+  border: #1e2023 solid 1px;
+  padding: 0;
+}
+
+div{
+  border: #1e2023 solid 1px;
+}
+
+ion-row{
+  border: #1e2023 solid 1px;
+  padding: 0;
+}
+
+ion-col{
+  border: #1e2023 solid 1px;
+  padding: 0;
+}
