--- a/client/src/app/psg/psg.page.html
+++ b/client/src/app/psg/psg.page.html
@@ -1,9 +1,81 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>psg</ion-title>
+    <ion-title>{{curPsg.title}}</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/tabs/tab1"></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
 
+  <ion-grid>
+    <!--头像、名称与介绍-->
+    <ion-row>
+      <ion-col size="2">
+        <img [src]="curUser.avaterUrl">
+      </ion-col>
+      <ion-col size="7">
+        <ion-grid>
+          <ion-row>
+            <ion-col>
+              {{curUser.nickname}}
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col>
+              {{curUser.email}}
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-col>
+      <ion-col size="3">
+        <div Button [type]="'primary'">关注</div>
+      </ion-col>
+    </ion-row>
+    <WhiteSpace size='md'></WhiteSpace>
+    <!--    文章正文部分-->
+    <WingBlank>
+      <ion-row>
+        <ion-col>
+          {{curPsg.content}}{{curPsg.content}}{{curPsg.content}}{{curPsg.content}}{{curPsg.content}}{{curPsg.content}}{{curPsg.content}}{{curPsg.content}}
+        </ion-col>
+      </ion-row>
+    </WingBlank>
+  </ion-grid>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-grid>
+      <ion-row>
+<!--        点赞-->
+        <ion-col size="4">
+          <ion-button expand="block">
+            <ion-icon name="thumbs-up-sharp"></ion-icon>{{curPsg.likeNumber}}
+          </ion-button>
+        </ion-col>
+<!--        评论-->
+        <ion-col size="4">
+          <ion-button expand="block">
+            <ion-icon name="chatbox"></ion-icon>{{curPsg.commentsNumber}}
+          </ion-button>
+        </ion-col>
+<!--        收藏-->
+        <ion-col size="2">
+          <ion-buttons>
+            <ion-button><ion-icon name="star-outline" slot="icon-only"></ion-icon></ion-button>
+          </ion-buttons>
+        </ion-col>
+<!--        其他-->
+        <ion-col size="2">
+          <ion-buttons>
+            <ion-button><ion-icon name="ellipsis-vertical-outline" slot="icon-only"></ion-icon></ion-button>
+          </ion-buttons>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-toolbar>
+</ion-footer>
+
+
